src/objects/CustomObject15__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>医院/产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>医院/产品名称</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>工作内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2017__c</fullName>
        <formula>pingfen__r.zhiji__r.Field10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>技术总结报告及分享篇数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pingfen__c</fullName>
        <label>工程师职级评分表</label>
        <referenceTo>CustomObject14__c</referenceTo>
        <relationshipLabel>工程师职级申报表</relationshipLabel>
        <relationshipName>egm7</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>工程师职级申报表</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field52__c</columns>
        <columns>Field1__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>S{YYYY}{MM}{DD}{00}</displayFormat>
        <label>工程师职级申报表</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>工程师职级申报表</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>